# latita

./: .gitignore  AGENTS.md  README.md  pyproject.toml
capsules/: ai-agents.cap  code-server.cap  docker-host.cap  ollama.cap  open-webui.cap  openclaw.cap  podman-host.cap  tailscale.cap  whisper.cap
scripts/: install-deps.sh
src/latita/: __init__.py  __main__.py  capsules.py  cli.py  cloudinit.py  config.py  hardening.py  libvirt.py  metadata.py  operations.py  prompts.py  tui.py  tui.tcss  utils.py
src/latita/builtin_capsules/: ai-agents.cap  code-server.cap  docker-host.cap  git-repo.cap  hermes.cap  open-webui.cap  podman-host.cap  tailscale.cap  whisper.cap
src/latita/builtin_templates/: desktop-minimal.latita  desktop-native.latita  desktop.latita  headless.latita
templates/: desktop.latita  headless.latita
tests/: conftest.py  e2e_tui_smoke.py  test_capsules.py  test_cli.py  test_cloudinit.py  test_config.py  test_hardening.py  test_integration.py  test_integration_ssh.py  test_metadata.py  test_operations.py  test_prompts.py  test_tui.py  test_utils.py
